# tmedia

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  COMMITING.md  DEV_NOTES.md  Dockerfile  LICENSE.md  README.md  bootstrap.sh  build.sh  config.sh  debian-ubuntu-bootstrap.sh  install.sh  main.cpp  tags
.github/workflows/: cmake.yml
assets/: README.md
doc/: BUILD.md  README.md  cli.md  color.md  limitations.md  playlist.md  tips.md  tui_design.txt
doc/dev/: README.md  cmake.md  curses-or-ncurses.md  goals.md  tui_design.md
doc/dev/modules/: README.md  mainloop.md  media.md
include/: ascii.h  ascii_video.h  asv_string.h  audio.h  audio_image.h  audio_visualizer.h  audiobuffer.h  audioout.h  audioresampler.h  audioringbuffer.h  avcurses.h  avguard.h  blocking_audioringbuffer.h  boiler.h  canvas.h  cli_iter.h  cli_parse.h  color.h  decode.h  except.h  ffmpeg_error.h  formatting.h  funcmac.h  gui.h  icons.h  looptype.h  maaudioout.h  media.h  mediaclock.h  mediadecoder.h  mediafetcher.h  mediaformat.h  mediaplayer.h  mediatype.h  metadata.h  miscutil.h  palette.h  palette_io.h  pixeldata.h  playback.h  (+26 more)
include/internal/: avcurses_internal.h  termcolor_internal.h  tmcurses_internal.h
include/tmedia/: signalstate.h  tmedia.h  tmedia_tui_elems.h  tmedia_vom.h  version.h.in
include/tmedia/audio/: audio.h  audio_visualizer.h  audioout.h  audioringbuffer.h  blocking_audioringbuffer.h  maaudioout.h  wminiaudio.h
include/tmedia/cmdlpar/: cmdlpar.h
include/tmedia/ctnr/: arraypairmap.h  arraypairmap.hpp  cirarr.hpp  cirvec.hpp  pairmap.h  pairmap.hpp  smallpairmap.h  smallvec.hpp
include/tmedia/ffmpeg/: audioresampler.h  avguard.h  boiler.h  decode.h  deleter.h  ffmpeg_error.h  probe.h  streamdecoder.h  videoconverter.h
include/tmedia/image/: ascii.h  canvas.h  color.h  palette.h  palette_io.h  pixeldata.h  scale.h
include/tmedia/media/: mediaclock.h  mediadecoder.h  mediafetcher.h  mediaformat.h  mediasource.h  mediatype.h  metadata.h  playlist.h
include/tmedia/tmcurses/: tmcurses.h
include/tmedia/tmcurses/internal/: tmcurses_internal.h
include/tmedia/util/: defines.h  formatting.h  miscutil.h  optim.h  sleep.h  thread.h  types.h  unitconvert.h  wmath.h  wtime.h
includes/: aabb.h  ascii.h  ascii_constants.h  ascii_data.h  audio.h  audioresampler.h  audiostream.h  boiler.h  cmdparse.h  color.h  curses_helpers.h  debug.h  decode.h  doublelinkedlist.hpp  except.h  formatting.h  framelist.h  gui.h  icons.h  image.h  info.h  loader.h  macros.h  main.h  media.h  mediadump.h  modes.h  ncursescpp.h  pixeldata.h  playback.h  playheadlist.hpp  renderer.h  scale.h  selectionlist.h  streamdata.h  termcolor.h  threads.h  unitconvert.h  video.h  videoconverter.h  (+3 more)
lib/: CMakeLists.txt  README.md  dav1d-1.1.0.tar.xz  deps.cmake  libva-2.18.0.tar.bz2
lib/NaturalSort/: LICENSE.md  natural_sort.hpp
lib/cmake/: ffmpeg.cmake  fmt.cmake  ncurses.cmake
lib/cmake/modules/: FindCurses.cmake
lib/ffmpeg/: CMakeLists.txt
lib/miniaudio/: README.md  miniaudio.c
lib/ncurses/: CMakeLists.txt
src/: aabb.cpp  alloc.c  alloc.cpp  ascii.c  ascii.cpp  ascii_video.cpp  asv_string.cpp  audio.c  audio.cpp  audio_image.cpp  audio_thread.cpp  audio_visualizer.cpp  audiobuffer.cpp  audioout.cpp  audioresampler.cpp  audioringbuffer.cpp  audiostream.cpp  avcurses.cpp  avcurses_print.cpp  blocking_audioringbuffer.cpp  blueprint.cpp  boiler.c  boiler.cpp  canvas.cpp  cli.cpp  cli_iter.cpp  color.c  color.cpp  curses_helpers.cpp  debug.c  debug.cpp  decode.c  decode.cpp  drawing.cpp  dump.c  dump.cpp  duration_checking.cpp  except.cpp  fileInfo.cpp  formatting.cpp  (+74 more)
src/audio/: audio_visualizer.cpp  audioringbuffer.cpp  blocking_audioringbuffer.cpp  maaudioout.cpp  wminiaudio.cpp
src/cli/: cli_iter.cpp
src/cmdlpar/: cmdlpar.cpp
src/ffmpeg/: audioresampler.cpp  boiler.cpp  decode.cpp  deleter.cpp  ffmpeg_error.cpp  probe.cpp  streamdecoder.cpp  videoconverter.cpp
src/image/: ascii.cpp  color.cpp  palette.cpp  palette_io.cpp  pixeldata.cpp  scale.cpp
src/media/: audio_thread.cpp  duration_checking.cpp  mediaclock.cpp  mediadecoder.cpp  mediafetcher.cpp  mediaformat.cpp  metadata.cpp  playlist.cpp  video_thread.cpp
src/tests/: test_asciiimage.cpp  test_audiobuffer.cpp  test_audiostream.cpp  test_cli_iter.cpp  test_cmdlpar.cpp  test_color.cpp  test_formatting.cpp  test_media.cpp  test_mediaclock.cpp  test_palette_io_gpl.cpp  test_pixeldata.cpp  test_playback.cpp  test_playheadlist.cpp  test_playlist.cpp  test_scale.cpp  test_unitconvert.cpp  test_wmath.cpp
src/tmcurses/: tmcurses.cpp  tmcurses_init.cpp  tmcurses_print.cpp
src/ui/: gui.cpp
src/util/: formatting.cpp  thread.cpp
